# duckbricks

./: .gitignore  .pre-commit-config.yaml  CONFIG.md  Dockerfile  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  main.py
app/components/: __init__.py  create_table_modal.py  hierarchy_tree.py  layout.py
app/constants/: __init__.py  ui_style.py
app/pages/: __init__.py  catalogs.py  explorer.py  query.py  schemas.py  tables.py
app/services/: __init__.py  ducklake.py
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md
docs/requirements/v0.1.0/: REQUIREMENTS.md
tests/: __init__.py  conftest.py  test_create_table.py  test_explorer.py  test_portal.py  test_query.py  test_query_workspace.py  test_service_hierarchy.py  test_services.py  test_v0_1_4_features.py
tests/components/: __init__.py  test_hierarchy_tree.py
